--- a/src/components/shared/header/Header.module.scss
+++ b/src/components/shared/header/Header.module.scss
@@ -21,7 +21,7 @@
   button {
     cursor: pointer;
     border: 0;
-    border-radius: 0;
+    // border-radius: 0;
     background-color: transparent;
   }
 
