--- a/src/components/shared/content/video-item/VideoItem.module.scss
+++ b/src/components/shared/content/video-item/VideoItem.module.scss
@@ -1,6 +1,14 @@
 .video_item {
   list-style: none;
   margin-bottom: 40px;
+  margin-left: 8px;
+  margin-right: 8px;
+
+  @media screen and (min-width: 771px) {
+    display: inline-block;
+    width: calc(50% - 16px - 2px);
+    vertical-align: top;
+  }
 
   .video_item_player {
     overflow: hidden;
@@ -13,6 +21,131 @@
       transform: translateY(-50%);
       width: 100%;
       height: auto;
+    }
+
+    .video_item_button {
+      position: absolute;
+      top: 0;
+      right: 0;
+      z-index: 1;
+      width: 32px;
+
+      button {
+        display: block;
+        position: relative;
+        width: 28px;
+        height: 28px;
+        margin: 4px;
+        background-color: #000;
+        border-radius: 2px;
+        cursor: pointer;
+        border: 0;
+        padding: 0;
+
+        svg {
+          width: 24px;
+          height: 24px;
+          fill: #fff;
+        }
+      }
+
+      .video_item_button_text {
+        overflow: hidden;
+        position: absolute;
+        top: 0;
+        right: 28px;
+        bottom: 0;
+        width: 0;
+        background-color: #000;
+        border-radius: 2px 0 0 2px;
+        font-size: 13px;
+        line-height: 28px;
+        color: #fff;
+        font-weight: 500;
+        white-space: nowrap;
+      }
+    }
+  }
+
+  .video_item_desc {
+    position: relative;
+    margin-top: 12px;
+    text-align: left;
+
+    .video_item_desc_profile {
+      overflow: hidden;
+      float: left;
+      width: 36px;
+      height: 36px;
+      margin-right: 12px;
+      border-radius: 50%;
+
+      img {
+        width: 100%;
+        height: 100%;
+        vertical-align: top;
+      }
+    }
+
+    .video_item_desc_text {
+      overflow: hidden;
+      padding-right: 24px;
+      margin: 0;
+      padding: 0;
+
+      a {
+        text-decoration: none;
+        cursor: pointer;
+      }
+
+      .video_item_desc_text_title {
+        overflow: hidden;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        text-overflow: ellipsis;
+        white-space: normal;
+        word-break: break-all;
+        display: -webkit-box;
+        font-size: 14px;
+        line-height: 20px;
+        color: #030303;
+        font-weight: 500;
+      }
+
+      .video_item_desc_text_channel {
+        display: inline-block;
+        padding-top: 6px;
+        vertical-align: top;
+
+        .video_item_desc_text_channel_name {
+          display: inline-block;
+          font-size: 14px;
+          line-height: 18px;
+          color: #606060;
+          vertical-align: middle;
+        }
+      }
+    }
+
+    .video_item_desc_text_hits {
+      font-size: 0;
+      line-height: 0;
+      display: block;
+
+      span {
+        display: inline-block;
+        font-size: 14px;
+        line-height: 18px;
+        color: #606060;
+        vertical-align: middle;
+      }
+      span + span:before {
+        display: inline-block;
+        margin: 0 4px 2px;
+        line-height: 16px;
+        vertical-align: middle;
+        content: "•";
+      }
     }
   }
 }
